--- a/1-WeLoveDogs/css/style.css
+++ b/1-WeLoveDogs/css/style.css
@@ -1,12 +1,25 @@
 * {
     box-sizing: border-box;
     background: #FFFFFF;
-    font-family: 'Open Sans', sans-serif;}
+    font-family: 'Open Sans', sans-serif;
+}
+
+body {
+    font-family: Open Sans;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 22px;
+    letter-spacing: 0em;
+    text-align: left;
+
+}
 
 a {
     text-decoration: none; 
     color: currentColor; 
 }
+
+/* HEADER */
 
 header {
     height: 120px;
@@ -59,19 +72,54 @@ nav ul {
 
 }
 
-body {
-    font-family: Open Sans;
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 22px;
-    letter-spacing: 0em;
-    text-align: left;
+/* MAIN */
 
+main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
-section {
+
+
+.section {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.section-home {
     display: flex;
     align-items: center;
     flex-direction: row;
+    justify-content: center;
+
+}
+
+.section-form {
+    display: flex;
+    align-items: center;
+    flex-direction: row-reverse;
+    justify-content: center;
+
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.h1-main {
+    font-size: 48px;
+    line-height: 65px;
 }
 
 .section-button {
@@ -81,6 +129,22 @@ section {
     background: #7ED321;
     color: #1C4701;
     border-radius: 15px;
+}
+
+.section-blog {
+    display: flex;
+    align-items: flex-end;
+    flex-direction: row-reverse;
+}
+
+p {
+    font-family: Open Sans;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0em;
+    text-align: justified;
+
 }
 
 form .section-button {
@@ -93,6 +157,7 @@ form .section-button {
 }
 .section-button a {
     background-color: #7ED321;
-  }
+}
+
   
 
