--- a/2-responsivo/css/style.css
+++ b/2-responsivo/css/style.css
@@ -165,3 +165,15 @@ p {
     justify-content: space-between;
     gap: 11px;
 }
+
+button {
+    border-style:hidden;
+    background-color: #DFDFD6;
+}
+
+button:hover img{
+    cursor: pointer;
+    opacity: 0.9;
+    border-style:hidden;
+    background-color: #DFDFD6;
+}
