--- a/3-atividade/vite-project/src/Calculator.css
+++ b/3-atividade/vite-project/src/Calculator.css
@@ -1,6 +1,5 @@
 button {
-    border: none;
-    /* border-radius: 100%; */
+    font-family: 'Wix Madefor Display', sans-serif;    border: none;
     border-radius: 50px;
     height: 80px;
     width: 80px;
@@ -13,7 +12,10 @@ button:hover {
     opacity: 70%;
 }
 
-.calculator {
+.calculator {  
+    font-family: 'Wix Madefor Display', sans-serif;    display: flex;
+    flex-direction: column;
+    gap: 10px;
     background-color: #000;
     width: 375px;
     padding: 50px 10px 30px 10px;
@@ -21,7 +23,16 @@ button:hover {
 }
 
 .display {
+    padding-right: 18px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
     height: 100px;
+}
+
+p {
+    color:#fff;
+    font-size: 4em;
 }
 
 .buttons {
