--- a/4-atividade/Jogo da Velha/src/styles/TicTacToe.css
+++ b/4-atividade/Jogo da Velha/src/styles/TicTacToe.css
@@ -4,8 +4,47 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 30px;
+}
+
+.main-game header {
+    display: flex;
+    flex-direction: column;
+    align-items: center
 }
 .game-title {
     color: rgb(0, 0, 0);
     font-size: 50px;
+}
+
+.choose-symbol {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.choose-symbol h2 {
+    color: rgb(0, 0, 0);
+    font-size: 30px;
+}
+
+.button-container button {
+    height: 60px;
+}
+
+.button-container .X {
+    background-color: #3e3bdf;
+}
+
+.button-container .O {
+    background-color: #991010;
+}
+
+.restart {
+    color: #fff;
+    background-color: rgb(61, 126, 17);
+    font-size: 50px;
+    width: 300px;
+    height: 120px;
 }
