--- a/4-atividade/Jogo da Velha/src/styles/TicTacToe.css
+++ b/4-atividade/Jogo da Velha/src/styles/TicTacToe.css
@@ -48,3 +48,13 @@
     width: 300px;
     height: 120px;
 }
+
+.restart:hover {
+    cursor: pointer;
+    box-shadow:0px 1px 10px #181717;
+    background-color: #1d6401
+}
+
+.selected {
+    border: 3px solid #FFF;
+}
