--- a/7-atividade/la-padarie-caio-arthur-rafael/src/app/page.module.css
+++ b/7-atividade/la-padarie-caio-arthur-rafael/src/app/page.module.css
@@ -1,9 +1,21 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   min-height: 100vh;
   background-color: #E5CF94;
 }
 
+.modalOverlay {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); 
+  z-index: 999 
+}
