--- a/4-tictactoe/Jogo da Velha/src/styles/Menu.css
+++ b/4-tictactoe/Jogo da Velha/src/styles/Menu.css
@@ -3,19 +3,18 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     background-color: rgb(255, 255, 255);
-    height: 400px;
+    height: 300px;
     width: 500px;
     border-radius: 35px;
     box-shadow: 0px 5px 10px #181717;
 }
 
 .menu-container h1 {
-    -webkit-text-stroke-color: rgb(0, 0, 0);
-    -webkit-text-stroke-width: 3px;
+    font-family: 'Share Tech Mono', monospace;
     font-size: 60px;
-    color: #bdaa80;
+    color: rgb(0, 0, 0);
 }
 
 .button-container {
@@ -23,7 +22,7 @@
     border-radius: 25px;
     display: flex;
     flex-direction: row;
-    gap: 25px;
+    gap: 20px;
 }
 
 .button-container button {
